Log error when ScopedDistributedLock::acquire fails to acquire the lock before timeout

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.7.8
    • Affects Version/s: 2.6.1
    • Component/s: Sharding
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In the distributed lock code we fail to acquire it if the clock skew on config servers is too high. However, the exception thrown is not visible at least on the 2.6 upgrade path.

            Assignee:
            Randolph Tan
            Reporter:
            Alexander Komyagin (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: