SERVER-14215 Log error when ScopedDistributedLock::acquire fails to acquire lock before timeout