src/mongo/s/distlock.cpp
@@ -293,13 +293,11 @@ namespace mongo {
             if ( _seen.count( s ) > 0 ) return s;
 
             // Check our clock skew
-            try {
-                if( lock.isRemoteTimeSkewed() ) {
-                    throw LockException( str::stream() << "clock skew of the cluster " << conn.toString() << " is too far out of bounds to allow distributed locking." , 13650 );
-                }
-            }
-            catch( LockException& e) {
-                throw LockException( str::stream() << "error checking clock skew of cluster " << conn.toString() << causedBy( e ) , 13651);
+            if (lock.isRemoteTimeSkewed()) {
+                throw LockException(
+                        str::stream() << "clock skew of the cluster " << conn.toString()
+                                      << " is too far out of bounds to allow distributed locking.",
+                        ErrorCodes::DistributedClockSkewed);
             }
 
             boost::thread t( stdx::bind( &DistributedLockPinger::distLockPingThread, this, conn, getJSTimeVirtualThreadSkew(), processId, sleepTime) );
@@ -539,7 +537,7 @@ namespace mongo {
     }
 
 
-    bool DistributedLock::isLockHeld( double timeout, string* errMsg ) {
+    Status DistributedLock::checkStatus(double timeout) {
 
         BSONObj lockObj;
         try {
@@ -549,37 +547,35 @@ namespace mongo {
             conn.done();
         }
         catch ( DBException& e ) {
-            *errMsg = str::stream() << "error checking whether lock " << _name << " is held "
-                                    << causedBy( e );
-            return false;
+            return e.toStatus();
         }
 
         if ( lockObj.isEmpty() ) {
-            *errMsg = str::stream() << "no lock for " << _name << " exists in the locks collection";
-            return false;
+            return Status(ErrorCodes::LockFailed,
+                    str::stream() << "no lock for " << _name << " exists in the locks collection");
         }
 
         if ( lockObj[LocksType::state()].numberInt() < 2 ) {
-            *errMsg = str::stream() << "lock " << _name << " current state is not held ("
-                                    << lockObj[LocksType::state()].numberInt() << ")";
-            return false;
+            return Status(ErrorCodes::LockFailed,
+                          str::stream() << "lock " << _name << " current state is not held ("
+                                        << lockObj[LocksType::state()].numberInt() << ")");
         }
 
         if ( lockObj[LocksType::process()].String() != _processId ) {
-            *errMsg = str::stream() << "lock " << _name << " is currently being held by "
-                                    << "another process ("
-                                    << lockObj[LocksType::process()].String() << ")";
-            return false;
+            return Status(ErrorCodes::LockFailed,
+                          str::stream() << "lock " << _name << " is currently being held by "
+                                        << "another process ("
+                                        << lockObj[LocksType::process()].String() << ")");
         }
 
         if ( distLockPinger.willUnlockOID( lockObj[LocksType::lockID()].OID() ) ) {
-            *errMsg = str::stream() << "lock " << _name << " is not held and is currently being "
-                                    << "scheduled for lazy unlock by "
-                                    << lockObj[LocksType::lockID()].OID();
-            return false;
+            return Status(ErrorCodes::LockFailed,
+                    str::stream() << "lock " << _name << " is not held and is currently being "
+                                  << "scheduled for lazy unlock by "
+                                  << lockObj[LocksType::lockID()].OID());
         }
 
-        return true;
+        return Status::OK();
     }
 
     static void logErrMsgOrWarn(const StringData& messagePrefix,
@@ -757,7 +753,12 @@ namespace mongo {
                         // and after the lock times out, we can be pretty sure the time is
                         // increasing at the same rate on all servers and therefore our
                         // timeout is accurate
-                        uassert( 14023, str::stream() << "remote time in cluster " << _conn.toString() << " is now skewed, cannot force lock.", !isRemoteTimeSkewed() );
+                        if (isRemoteTimeSkewed()) {
+                            throw LockException(
+                                    str::stream() << "remote time in cluster " << _conn.toString()
+                                                  << " is now skewed, cannot force lock.",
+                                    ErrorCodes::DistributedClockSkewed);
+                        }
 
                         // Make sure we break the lock with the correct "ts" (OID) value, otherwise
                         // we can overwrite a new lock inserted in the meantime.
@@ -782,6 +783,10 @@ namespace mongo {
                         // Ok to continue since we know we forced at least one lock document, and all lock docs
                         // are required for a lock to be held.
                         warning() << "lock forcing " << lockName << " inconsistent" << endl;
+                    }
+                    catch (const LockException& ) {
+                        // Let the exception go up and don't repackage the exception.
+                        throw;
                     }
                     catch( std::exception& e ) {
                         conn.done();
@@ -1164,7 +1169,7 @@ namespace mongo {
         }
     }
 
-    bool ScopedDistributedLock::tryAcquire(string* errMsg) {
+    Status ScopedDistributedLock::tryAcquire() {
         try {
             _acquired = _lock.lock_try(_why,
                                        false,
@@ -1172,45 +1177,45 @@ namespace mongo {
                                        static_cast<double>(_socketTimeoutMillis / 1000));
         }
         catch (const DBException& e) {
-
-            *errMsg = str::stream() << "error acquiring distributed lock " << _lock._name << " for "
-                                    << _why << causedBy(e);
-
-            return false;
+            return e.toStatus();
         }
 
-        return _acquired;
+        if (_acquired) {
+            return Status::OK();
+        }
+
+        return Status(ErrorCodes::LockBusy, str::stream() << "Lock for " << _why << " is taken.");
     }
 
     void ScopedDistributedLock::unlock() {
         _lock.unlock(&_other);
     }
 
-    bool ScopedDistributedLock::acquire(long long waitForMillis, string* errMsg) {
-
-        string dummy;
-        if (!errMsg) errMsg = &dummy;
-
+    Status ScopedDistributedLock::acquire(long long waitForMillis) {
         Timer timer;
         Timer msgTimer;
 
-        while (!_acquired && (waitForMillis <= 0 || timer.millis() < waitForMillis)) {
+        Status lastStatus = Status::OK();
+        while (waitForMillis <= 0 || timer.millis() < waitForMillis) {
+            lastStatus = tryAcquire();
+            _acquired = lastStatus.isOK();
 
-            string acquireErrMsg;
-            _acquired = tryAcquire(&acquireErrMsg);
-
-            if (_acquired) break;
-
-            // Set our error message to the last error, in case we break with !_acquired
-            *errMsg = acquireErrMsg;
+            if (_acquired) {
+                verify(!_other.isEmpty());
+                return Status::OK();
+            }
 
             if (waitForMillis == 0) break;
+
+            if (lastStatus.code() == ErrorCodes::DistributedClockSkewed) {
+                return lastStatus;
+            }
 
             // Periodically message for debugging reasons
             if (msgTimer.seconds() > 10) {
 
                 log() << "waited " << timer.seconds() << "s for distributed lock " << _lock._name
-                      << " for " << _why << endl;
+                      << " for " << _why << ": " << lastStatus.toString() << endl;
 
                 msgTimer.reset();
             }
@@ -1219,29 +1224,15 @@ namespace mongo {
             sleepmillis(std::min(_lockTryIntervalMillis, timeRemainingMillis));
         }
 
-        if (_acquired) {
-            verify(!_other.isEmpty());
-            return true;
-        }
-
-        *errMsg = str::stream() << "could not acquire distributed lock " << _lock._name << " for "
-                                << _why << " after " << timer.seconds()
-                                << "s, other lock may be held: " << _other << causedBy(errMsg);
-
-        return false;
+        return lastStatus;
     }
 
-    /**
-     * Returns false if the lock is known _not_ to be held, otherwise asks the underlying
-     * lock to issue a 'isLockHeld' call and returns whatever that calls does.
-     */
-    bool ScopedDistributedLock::verifyLockHeld(std::string* errMsg) {
+    Status ScopedDistributedLock::checkStatus() {
         if (!_acquired) {
-            *errMsg = "lock was never acquired";
-            return false;
+            return Status(ErrorCodes::LockFailed, "lock was never acquired");
         }
 
-        return _lock.isLockHeld(static_cast<double>(_socketTimeoutMillis / 1000), errMsg);
+        return _lock.checkStatus(static_cast<double>(_socketTimeoutMillis / 1000));
     }
 
 }
